deploy/kubernetes/chatto.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chatto
  namespace: default
  labels:
    app: chatto
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chatto
  template:
    metadata:
      namespace: default
      labels:
        app: chatto
    spec:
      containers:
        - name: chatto
          image: jaimeteb/chatto
          imagePullPolicy: Always
          ports:
            - containerPort: 4770
          readinessProbe:
            httpGet:
              path: /bot/healthz
              port: 4770
            initialDelaySeconds: 5
            periodSeconds: 5
            successThreshold: 1
          volumeMounts:
            - name: chatto-config-volume
              mountPath: /data
          resources:
            limits:
              memory: "500Mi"
              cpu: "1"
      volumes:
        - name: chatto-config-volume
          configMap:
            name: chatto-config-files

---
apiVersion: v1
kind: Service
metadata:
  name: chatto-service
  namespace: default
spec:
  selector:
    app: chatto
  ports:
    - name: http
      protocol: TCP
      port: 4770

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chatto-ingress
  namespace: default
spec:
  rules:
    - host: chatto.example.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: chatto-service
                port:
                  number: 4770
